refactor: make btm active again!