@@ -27,9 +27,9 @@ import java.util.Map;
  * @author Brett Wooldridge
  */
 final class XAFactoryHelper {
-    private final static Logger log = LoggerFactory.getLogger(XAFactoryHelper.class);
+    private static final Logger log = LoggerFactory.getLogger(XAFactoryHelper.class);
 
-    private final static String PASSWORD_PROPERTY_NAME = "password";
+    private static final String PASSWORD_PROPERTY_NAME = "password";
 
     private XAFactoryHelper() {
         // This class is not instantiable.
@@ -37,10 +37,11 @@ final class XAFactoryHelper {
 
     static Object createXAFactory(ResourceBean bean) throws Exception {
         String className = bean.getClassName();
-        if (className == null)
+        if (className == null) {
             throw new IllegalArgumentException("className cannot be null");
+        }
         Class<?> xaFactoryClass = ClassLoaderUtils.loadClass(className);
-        Object xaFactory = xaFactoryClass.newInstance();
+        Object xaFactory = xaFactoryClass.getDeclaredConstructor().newInstance();
 
         for (Map.Entry<Object, Object> entry : bean.getDriverProperties().entrySet()) {
             String name = (String) entry.getKey();
@@ -50,7 +51,9 @@ final class XAFactoryHelper {
                 value = decrypt(value.toString());
             }
 
-            if (log.isDebugEnabled()) { log.debug("setting vendor property '" + name + "' to '" + value + "'"); }
+            if (log.isDebugEnabled()) {
+                log.debug("setting vendor property '" + name + "' to '" + value + "'");
+            }
             PropertyUtils.setProperty(xaFactory, name, value);
         }
         return xaFactory;
@@ -60,11 +63,14 @@ final class XAFactoryHelper {
         int startIdx = resourcePassword.indexOf("{");
         int endIdx = resourcePassword.indexOf("}");
 
-        if (startIdx != 0 || endIdx == -1)
+        if (startIdx != 0 || endIdx == -1) {
             return resourcePassword;
+        }
 
         String cipher = resourcePassword.substring(1, endIdx);
-        if (log.isDebugEnabled()) { log.debug("resource password is encrypted, decrypting " + resourcePassword); }
+        if (log.isDebugEnabled()) {
+            log.debug("resource password is encrypted, decrypting {}", resourcePassword);
+        }
         return CryptoEngine.decrypt(cipher, resourcePassword.substring(endIdx + 1));
     }
 }
