@@ -15,14 +15,6 @@
  */
 package bitronix.tm.resource.jdbc.proxy;
 
-import java.sql.CallableStatement;
-import java.sql.Connection;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
-import java.sql.Statement;
-
-import javax.sql.XAConnection;
-
 import bitronix.tm.TransactionManagerServices;
 import bitronix.tm.internal.BitronixRuntimeException;
 import bitronix.tm.resource.jdbc.JdbcPooledConnection;
@@ -30,16 +22,22 @@ import bitronix.tm.resource.jdbc.LruStatementCache.CacheKey;
 import bitronix.tm.resource.jdbc.lrc.LrcXAResource;
 import bitronix.tm.utils.ClassLoaderUtils;
 
+import javax.sql.XAConnection;
+import java.sql.*;
+
 /**
  *
  */
 public interface JdbcProxyFactory {
 
-    /* Classes should use JdbcProxyFactory.INSTANCE to access the factory */
-    final JdbcProxyFactory INSTANCE = Initializer.initialize();
+    /**
+     * Classes should use JdbcProxyFactory.INSTANCE to access the factory
+     */
+    JdbcProxyFactory INSTANCE = Initializer.initialize();
 
-    /* Methods used to create the proxies around various JDBC classes */
-
+    /**
+     * Methods used to create the proxies around various JDBC classes
+     */
     Connection getProxyConnection(JdbcPooledConnection jdbcPooledConnection, Connection connection);
 
     Statement getProxyStatement(JdbcPooledConnection jdbcPooledConnection, Statement statement);
@@ -55,9 +53,12 @@ public interface JdbcProxyFactory {
     Connection getProxyConnection(LrcXAResource xaResource, Connection connection);
 
     /**
-     * Initializer class used to initialize the proxy factory. 
+     * Initializer class used to initialize the proxy factory.
      */
     class Initializer {
+        private Initializer() {
+        }
+
         private static JdbcProxyFactory initialize() {
             try {
                 String jdbcProxyFactoryClass = TransactionManagerServices.getConfiguration().getJdbcProxyFactoryClass();
@@ -65,19 +66,17 @@ public interface JdbcProxyFactory {
                     try {
                         ClassLoaderUtils.loadClass("javassist.CtClass");
                         jdbcProxyFactoryClass = "bitronix.tm.resource.jdbc.proxy.JdbcJavassistProxyFactory";
-                    }
-                    catch (ClassNotFoundException cnfe) {
+                    } catch (ClassNotFoundException cnfe) {
                         try {
                             ClassLoaderUtils.loadClass("net.sf.cglib.proxy.Enhancer");
                             jdbcProxyFactoryClass = "bitronix.tm.resource.jdbc.proxy.JdbcCglibProxyFactory";
-                        }
-                        catch (ClassNotFoundException cnfe2) {
+                        } catch (ClassNotFoundException cnfe2) {
                             jdbcProxyFactoryClass = "bitronix.tm.resource.jdbc.proxy.JdbcJavaProxyFactory";
                         }
                     }
                 }
                 Class<?> proxyFactoryClass = ClassLoaderUtils.loadClass(jdbcProxyFactoryClass);
-                return (JdbcProxyFactory) proxyFactoryClass.newInstance();
+                return (JdbcProxyFactory) proxyFactoryClass.getDeclaredConstructor().newInstance();
             } catch (Exception ex) {
                 throw new BitronixRuntimeException("error initializing JdbcProxyFactory", ex);
             }
